// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Heading should render properly with some props assigned 1`] = `
<h2
  className="test-class Heading gray"
=======
exports[`Heading should render with many props assigned 1`] = `
<h2
  className="test-class Heading secondary"
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
  id="test-heading-1"
>
  Test
</h2>
`;

<<<<<<< HEAD
exports[`Heading should render with just required props passed 1`] = `
=======
exports[`Heading should render with required props 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<h2
  className="Heading gray headingLines"
  id=""
>
  Test
</h2>
`;
